--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@crowdin/ota-client": "^1.1.0",
+    "@types/node": "^20.8.10",
     "google-libphonenumber": "^3.2.33"
   }
 }
